[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/PlayerAssets/TankAssets/panzerpng1.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Game/Hangar.gd" type="Script" id=3]
[ext_resource path="res://Fonts/DynaPuff-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Environment/GroundTile/tile1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Environment/GroundTile/tile3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Environment/GroundTile/tile9.png" type="Texture" id=7]
[ext_resource path="res://Assets/Environment/GroundTile/tile11.png" type="Texture" id=8]
[ext_resource path="res://Assets/Environment/GroundTile/title12.png" type="Texture" id=9]
[ext_resource path="res://Assets/Environment/GroundTile/tile2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Environment/GroundTile/tile6.png" type="Texture" id=11]
[ext_resource path="res://Assets/Environment/GroundTile/tile4.png" type="Texture" id=12]
[ext_resource path="res://Assets/Environment/GroundTile/tile7.png" type="Texture" id=13]
[ext_resource path="res://Assets/Environment/GroundTile/tile8.png" type="Texture" id=14]
[ext_resource path="res://Fonts/RussoOne-Regular.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Assets/UI/back_menu3.png" type="Texture" id=16]
[ext_resource path="res://Assets/UI/back_menu2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Extras/Medals/Medal/medal2.png" type="Texture" id=18]
[ext_resource path="res://Assets/Extras/Medals/Medal/Medal1.png" type="Texture" id=19]
[ext_resource path="res://Assets/GUI/BuyButton.png" type="Texture" id=20]
[ext_resource path="res://Assets/GUI/ArmyButton1.png" type="Texture" id=21]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=22]

[sub_resource type="TileSet" id=2]
0/name = "title12.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tile11.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tile9.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tile8.png 3"
3/texture = ExtResource( 14 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "tile7.png 4"
4/texture = ExtResource( 13 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "tile6.png 5"
5/texture = ExtResource( 11 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "tile4.png 6"
6/texture = ExtResource( 12 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "tile3.png 7"
7/texture = ExtResource( 6 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "tile2.png 8"
8/texture = ExtResource( 10 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "tile1.png 9"
9/texture = ExtResource( 5 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 38
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=7]
resource_name = "PlayerHangarAni"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("TankSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 152, 720 ), Vector2( 152, 690 ), Vector2( 152, 650 ), Vector2( 152, 600 ), Vector2( 152, 550 ), Vector2( 152, 510 ), Vector2( 152, 470 ), Vector2( 152, 430 ), Vector2( 152, 390 ), Vector2( 152, 350 ), Vector2( 152, 320 ), Vector2( 152, 290 ), Vector2( 152, 260 ), Vector2( 152, 230 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TankSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 152, 720 ) ]
}

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 4 )

[node name="Hangar" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( -1, 1073741826, 0, -65536, 1073741826, 0, -65535, 1073741826, 0, -65534, 1073741826, 0, -65533, 1073741826, 0, -65532, 1073741826, 0, -65531, 1073741826, 0, -65530, 1073741826, 0, -65529, 1073741826, 0, -65528, 1073741826, 0, -65527, 1073741826, 0, -65526, 1073741826, 0, -65525, 1073741826, 0, -65524, 1073741826, 0, -65523, 1073741826, 0, -65522, 1073741826, 0, -65521, 1073741826, 0, -65520, 1073741826, 0, -65519, 1073741826, 0, -65518, 1073741826, 0, -65517, 1073741826, 0, -65516, 1073741826, 0, 65535, 1073741826, 0, 0, -1073741821, 0, 1, -1073741821, 0, 2, -1073741821, 0, 3, -1073741821, 0, 4, 1073741826, 0, 5, 1073741826, 0, 6, 1073741826, 0, 7, 1073741826, 0, 8, 1073741826, 0, 9, 1073741826, 0, 10, 1073741826, 0, 11, 1073741826, 0, 12, 536870921, 0, 13, 536870913, 0, 14, 536870913, 0, 15, 536870913, 0, 16, 536870913, 0, 17, 536870913, 0, 18, 1073741826, 0, 19, 1073741826, 0, 20, 1073741826, 0, 131071, 1073741826, 0, 65536, 1610612739, 0, 65537, 1610612742, 0, 65538, 1610612743, 0, 65539, 1610612742, 0, 65540, -1073741821, 0, 65541, 1610612738, 0, 65542, 1073741826, 0, 65543, 1073741826, 0, 65544, 1073741826, 0, 65545, 1073741826, 0, 65546, 1073741826, 0, 65547, 1073741826, 0, 65548, 1073741826, 0, 65549, 536870918, 0, 65550, 536870918, 0, 65551, 536870918, 0, 65552, 536870918, 0, 65553, 536870918, 0, 65554, 1073741826, 0, 65555, 1073741826, 0, 65556, 1073741826, 0, 196607, 1073741826, 0, 131072, 1073741828, 0, 131073, 1073741825, 0, 131074, 1610612736, 0, 131075, 1073741825, 0, 131076, 1610612740, 0, 131077, 1610612738, 0, 131078, 1073741826, 0, 131079, 536870913, 0, 131080, 536870913, 0, 131081, 536870913, 0, 131082, 536870913, 0, 131083, 1073741826, 0, 131084, 1073741826, 0, 131085, 1073741826, 0, 131086, 1073741826, 0, 131087, 1073741826, 0, 131088, 1073741826, 0, 131089, 1073741826, 0, 131090, 1073741826, 0, 131091, 1073741826, 0, 131092, 1073741826, 0, 262143, 1073741826, 0, 196608, 1073741828, 0, 196609, 1610612736, 0, 196610, 1073741825, 0, 196611, 1610612736, 0, 196612, 1610612740, 0, 196613, 1073741826, 0, 196614, 1073741826, 0, 196615, 1073741826, 0, 196616, 1073741826, 0, 196617, 1073741826, 0, 196618, 1073741826, 0, 196619, 1073741826, 0, 196620, 1073741826, 0, 196621, 1073741826, 0, 196622, 1073741826, 0, 196623, 1073741826, 0, 196624, 1073741826, 0, 196625, 1073741826, 0, 196626, 1073741826, 0, 196627, 1073741826, 0, 196628, 1073741826, 0, 327679, 1073741826, 0, 262144, 1073741828, 0, 262145, 1073741825, 0, 262146, 1610612736, 0, 262147, 1073741825, 0, 262148, 1610612740, 0, 262149, 1073741826, 0, 262150, 1073741826, 0, 262151, 536870913, 0, 262152, 536870913, 0, 262153, 536870913, 0, 262154, 536870913, 0, 262155, 1073741826, 0, 262156, 1073741826, 0, 262157, 1073741826, 0, 262158, 1073741826, 0, 262159, 1073741826, 0, 262160, 1073741826, 0, 262161, 1073741826, 0, 262162, 1073741826, 0, 262163, 1073741826, 0, 262164, 1073741826, 0, 393215, 1073741826, 0, 327680, 1073741828, 0, 327681, 1610612736, 0, 327682, 1073741825, 0, 327683, 1610612736, 0, 327684, 1610612740, 0, 327685, 1073741826, 0, 327686, 1073741826, 0, 327687, 1073741826, 0, 327688, 1073741826, 0, 327689, 1073741826, 0, 327690, 1073741826, 0, 327691, 1073741826, 0, 327692, 1073741826, 0, 327693, 1073741826, 0, 327694, 1073741826, 0, 327695, 1073741826, 0, 327696, 1073741826, 0, 327697, 1073741826, 0, 327698, 1073741826, 0, 327699, 1073741826, 0, 327700, 1073741826, 0, 458751, 1073741826, 0, 393216, 4, 0, 393217, 1, 0, 393218, 0, 0, 393219, 1, 0, 393220, -1073741818, 0, 393221, 1073741826, 0, 393222, 1073741826, 0, 393223, 536870913, 0, 393224, 536870913, 0, 393225, 536870913, 0, 393226, 536870913, 0, 393227, 1073741826, 0, 393228, 1073741826, 0, 393229, 1073741826, 0, 393230, 1073741826, 0, 393231, 1073741826, 0, 393232, 1073741826, 0, 393233, 1073741826, 0, 393234, 1073741826, 0, 393235, 1073741826, 0, 393236, 1073741826, 0, 524287, 1073741826, 0, 458752, 4, 0, 458753, 0, 0, 458754, 1, 0, 458755, 0, 0, 458756, 1610612740, 0, 458757, 1073741826, 0, 458758, 1073741826, 0, 458759, 1073741826, 0, 458760, 1073741826, 0, 458761, 1073741826, 0, 458762, 1073741826, 0, 458763, 1073741826, 0, 458764, 1073741826, 0, 458765, 1073741826, 0, 458766, 1073741826, 0, 458767, 1073741826, 0, 458768, 1073741826, 0, 458769, 1073741826, 0, 458770, 1073741826, 0, 458771, 1073741826, 0, 458772, 1073741826, 0, 589823, 1073741826, 0, 524288, -1610612730, 0, 524289, 0, 0, 524290, 1, 0, 524291, 0, 0, 524292, -1073741818, 0, 524293, 1073741826, 0, 524294, 1073741826, 0, 524295, 1073741826, 0, 524296, 1073741826, 0, 524297, 1073741826, 0, 524298, 1073741826, 0, 524299, 1073741826, 0, 524300, 1073741826, 0, 524301, 1073741826, 0, 524302, 1073741826, 0, 524303, 1073741826, 0, 524304, 1073741826, 0, 524305, 1073741826, 0, 524306, 1073741826, 0, 524307, 1073741826, 0, 524308, 1073741826, 0, 655359, 1073741826, 0, 589824, -1610612730, 0, 589825, 1, 0, 589826, 0, 0, 589827, 1, 0, 589828, 1610612740, 0, 589829, 1073741826, 0, 589830, 1073741826, 0, 589831, 1073741826, 0, 589832, 1073741826, 0, 589833, 1073741826, 0, 589834, 1073741826, 0, 589835, 1073741826, 0, 589836, 1073741826, 0, 589837, 1073741826, 0, 589838, 1073741826, 0, 589839, 1073741826, 0, 589840, 1073741826, 0, 589841, 1073741826, 0, 589842, 1073741826, 0, 589843, 1073741826, 0, 589844, 1073741826, 0, 720895, 1073741826, 0, 655360, -1610612730, 0, 655361, 0, 0, 655362, 1, 0, 655363, 0, 0, 655364, -1073741818, 0, 655365, 1073741826, 0, 655366, 1073741826, 0, 655367, 1073741826, 0, 655368, 1073741826, 0, 655369, 1073741826, 0, 655370, 1073741826, 0, 655371, 1073741826, 0, 655372, 1073741826, 0, 655373, 1073741826, 0, 655374, 1073741826, 0, 655375, 1073741826, 0, 655376, 1073741826, 0, 655377, 1073741826, 0, 655378, 1073741826, 0, 655379, 1073741826, 0, 655380, 1073741826, 0, 786431, 1073741826, 0, 720896, -1610612730, 0, 720897, 1, 0, 720898, 0, 0, 720899, 1, 0, 720900, 1610612740, 0, 720901, 1073741826, 0, 720902, 1073741826, 0, 720903, 1073741826, 0, 720904, 1073741826, 0, 720905, 1073741826, 0, 720906, 1073741826, 0, 720907, 1073741826, 0, 720908, 1073741826, 0, 720909, 1073741826, 0, 720910, 1073741826, 0, 720911, 1073741826, 0, 720912, 1073741826, 0, 720913, 1073741826, 0, 720914, 1073741826, 0, 720915, 1073741826, 0, 720916, 1073741826, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TankSprite" type="Sprite" parent="."]
position = Vector2( 152, 720 )
texture = ExtResource( 1 )

[node name="NextLevelButton" type="TouchScreenButton" parent="."]
position = Vector2( 989, 537 )
scale = Vector2( 1.8, 1.8 )
normal = ExtResource( 21 )

[node name="RepairKitBuyButton" type="TouchScreenButton" parent="."]
position = Vector2( 480, 111 )
scale = Vector2( 1.5, 1.6 )
normal = ExtResource( 20 )

[node name="Missile3BuyButton" type="TouchScreenButton" parent="."]
position = Vector2( 479, 240 )
scale = Vector2( 1.5, 1.6 )
normal = ExtResource( 20 )

[node name="Missile2BuyButton" type="TouchScreenButton" parent="."]
position = Vector2( 479, 369 )
scale = Vector2( 1.5, 1.6 )
normal = ExtResource( 20 )

[node name="LevelsButton" type="TouchScreenButton" parent="."]
position = Vector2( 1020, 433 )
scale = Vector2( 1.5, 1.8 )
normal = ExtResource( 21 )

[node name="BackButton" type="TouchScreenButton" parent="."]
position = Vector2( 0, 3 )
normal = ExtResource( 17 )
pressed = ExtResource( 16 )

[node name="RepairKitBuyLabel" type="Label" parent="."]
margin_left = 535.0
margin_top = 137.0
margin_right = 617.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 3 )
text = "REPAIR KIT
  10 "

[node name="Missile3BuyLabel" type="Label" parent="."]
margin_left = 535.0
margin_top = 267.0
margin_right = 617.0
margin_bottom = 310.0
custom_fonts/font = SubResource( 3 )
text = "MISSILE 3
  10 "

[node name="Missile2BuyLabel" type="Label" parent="."]
margin_left = 535.0
margin_top = 397.0
margin_right = 617.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 3 )
text = "MISSILE 2
  10 "

[node name="NextLevelLabel" type="Label" parent="."]
margin_left = 1039.0
margin_top = 574.0
margin_right = 1171.0
margin_bottom = 617.0
custom_fonts/font = SubResource( 1 )
text = "PLAY NEXT LEVEL
 			         LEVEL: 1"

[node name="MedalLabel" type="Label" parent="."]
margin_left = 745.0
margin_top = 33.0
margin_right = 849.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 5 )
text = "100"

[node name="Medal2Label" type="Label" parent="."]
margin_left = 546.0
margin_top = 33.0
margin_right = 650.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="LevelsLabel" type="Label" parent="."]
margin_left = 1051.0
margin_top = 472.0
margin_right = 1175.0
margin_bottom = 511.0
rect_pivot_offset = Vector2( -965, -607 )
custom_fonts/font = SubResource( 6 )
text = "LEVELS"

[node name="Inventory" type="Node2D" parent="."]
position = Vector2( 0, 3 )

[node name="Missile2" type="Sprite" parent="Inventory"]
position = Vector2( 883, 35 )
texture = ExtResource( 2 )

[node name="Missile3" type="Sprite" parent="Inventory"]
position = Vector2( 979, 35 )
texture = ExtResource( 2 )

[node name="KitRepair" type="Sprite" parent="Inventory"]
position = Vector2( 1083, 35 )
texture = ExtResource( 2 )

[node name="Missile2Label" type="Label" parent="Inventory"]
margin_left = 864.0
margin_top = 66.0
margin_right = 904.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 4 )
text = "10"

[node name="Missile3Label" type="Label" parent="Inventory"]
margin_left = 960.0
margin_top = 66.0
margin_right = 1000.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 4 )
text = "10"

[node name="RepairKitLabel" type="Label" parent="Inventory"]
margin_left = 1063.0
margin_top = 66.0
margin_right = 1103.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 4 )
text = "10"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PlayerHangarAni = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="Medal1" type="Sprite" parent="."]
position = Vector2( 711, 47 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 19 )

[node name="Medal2" type="Sprite" parent="."]
position = Vector2( 506, 46 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 18 )

[node name="BuyMedalRepairKit" type="Sprite" parent="."]
position = Vector2( 574, 169 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 19 )

[node name="BuyMedalMissile3" type="Sprite" parent="."]
position = Vector2( 574, 300 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 19 )

[node name="BuyMedalMissile2" type="Sprite" parent="."]
position = Vector2( 573, 429 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 19 )

[node name="ResetLoad" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 943, 300 )
scale = Vector2( 2.25, 1.59375 )
normal = ExtResource( 2 )

[node name="faultshoot" type="Node2D" parent="."]
position = Vector2( 0, 3 )

[node name="Sprite" type="Sprite" parent="faultshoot"]
position = Vector2( 573, 540.5 )
scale = Vector2( 1.95703, 2.70312 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="faultshoot"]
margin_left = 447.0
margin_top = 591.0
margin_right = 737.0
margin_bottom = 616.0
rect_rotation = -29.7299
custom_fonts/font = SubResource( 9 )
text = "Otomatik nişan tamiri için video izle"

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 22 )
banner_on_top = false
banner_id = "ca-app-pub-3940256099942544/6300978111"
interstitial_id = "ca-app-pub-3940256099942544/1033173712"

[connection signal="pressed" from="NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="RepairKitBuyButton" to="." method="_on_RepairKitBuyButton_pressed"]
[connection signal="pressed" from="Missile3BuyButton" to="." method="_on_Missile3BuyButton_pressed"]
[connection signal="pressed" from="Missile2BuyButton" to="." method="_on_Missile2BuyButton_pressed"]
[connection signal="pressed" from="LevelsButton" to="." method="_on_LevelsButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ResetLoad" to="." method="_on_ResetLoad_pressed"]
